# application-services

./: Cargo.toml  Enums.html  Extensions.html  Functions.html  Structs.html  Typealiases.html  index.html
.cargo/: config.toml
Classes/: FxaStateMachineChecker.html  LoginStore.html  NimbusClient.html  NimbusStringHelper.html  OhttpSession.html  PlacesConnection.html  PushManager.html  RecordedContextImpl.html  RemoteCommandStore.html  Store.html  SuggestStoreBuilder.html  SyncManager.html
Enums/: BookmarkPosition.html  BridgeType.html  CloseTabsResult.html  CrashTestError.html  DeviceCapability.html  FrecencyThresholdOption.html  FxaError.html  FxaStateCheckerEvent.html  FxaStateCheckerState.html  InterruptKind.html  Level.html  LoginsApiError.html  NimbusError.html  OhttpError.html  PushApiError.html  RemoteSettingsError.html  SuggestApiError.html  SuggestProviderConfig.html  Suggestion.html  VisitType.html
Extensions/: FfiConverterCallbackInterfaceAppServicesLogger.html  FfiConverterCallbackInterfaceApplicationErrorReporter.html  FfiConverterPrimitive.html
Protocols/: AppServicesLogger.html  ApplicationErrorReporter.html  LoginStoreProtocol.html  NimbusClientProtocol.html  NimbusStringHelperProtocol.html  NimbusTargetingHelperProtocol.html  OhttpSessionProtocol.html  OhttpTestServerProtocol.html  PlacesApiProtocol.html  PlacesConnectionProtocol.html  RecordedContext.html  (+9 more)
components/search/: Cargo.toml
components/search/benches/: benchmark_all.rs
components/search/src/: basic-config.json  error.rs  filter.rs  lib.rs  schema_types.rs  search.udl  selector.rs
(+292 files in other folders)
