[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-support = { path = "../support/error" }
parking_lot = ">=0.11,<=0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uniffi = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

# [features]
# # Required for the benchmarks to work, wasted bytes otherwise.
# benchmark_api = ["tempfile"]

[[bench]]
name = "benchmark_all"
harness = false
# required-features = ["benchmark_api"]
